--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,9 +10,7 @@
 <body>
     <h1>Olá, Mundo!</h1>
     <hr>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque voluptatem iste vitae assumenda, laudantium totam
-        excepturi atque nobis architecto molestias vel nostrum exercitationem omnis tempora deleniti accusamus, eos
-        facilis labore.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque voluptatem iste vitae assumenda, laudantium totam excepturi atque nobis architecto molestias vel nostrum exercitationem omnis tempora deleniti accusamus, eos  facilis labore.</p>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam nulla earum beatae velit. Aperiam repellat molestias odit hic minima ab deleniti, neque distinctio, natus accusantium quisquam praesentium minus fugiat iure.</p>
 </body>
 
